--- a/styles/dark.css
+++ b/styles/dark.css
@@ -192,7 +192,7 @@
 
 .what{
   display: grid;
-  gap: 20px;
+  row-gap: 20px;;
 }
 
 .what__title{
@@ -354,7 +354,15 @@
   font-weight: var(--bold-fonts);
   line-height: var(--line-height); 
 }
-
+.titlee{
+  background-color:  var(--background);
+  color: var(--title);
+  font-family: var(--font-family) ,sans-serif;
+  font-size:var(--font-size);
+  font-style: normal;
+  font-weight: var(--bold-fonts);
+  line-height: var(--line-height); 
+}
 .title-skinny{
   background-color:  var(--background);
   margin-bottom: 10px ;
