--- a/styles/light.css
+++ b/styles/light.css
@@ -11,7 +11,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  background-image: url(/images/cover-image-light.png); 
+  background-image: url(../images/cover-image-light.png); 
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed; 
@@ -119,7 +119,7 @@
 }
 
 .header::before{
-  content:var(--rec) ;
+  content: var(--rec);
   position: absolute;
   width: 33px;
   height: 26px;
@@ -190,13 +190,14 @@
 
 .what{
   display: grid;
-  gap: 20px;
+  row-gap: 20px;
 }
 
 .what__title{
    display: grid;
    grid-template-columns: repeat( 3 ,1fr);
    grid-column: 1/3;
+   gap: 10px;
 }
 
 .what__content{
@@ -214,7 +215,9 @@
 
 .how__content{
   grid-area:p;
+  display: grid;
   gap: 20px;
+  
 }
 
 .how__title{
@@ -352,7 +355,15 @@
   font-weight: var(--bold-fonts);
   line-height: var(--line-height); 
 }
-
+.titlee{
+  background-color:  var(--background);
+  color: var(--title);
+  font-family: var(--font-family) ,sans-serif;
+  font-size:var(--font-size);
+  font-style: normal;
+  font-weight: var(--bold-fonts);
+  line-height: var(--line-height); 
+}
 .title-skinny{
   background-color:  var(--background);
   margin-bottom: 10px ;
@@ -419,18 +430,29 @@
     grid-area: m;
     display: flex;
     justify-content: center; 
+  }
 
+  .why{
+    display: grid;
+    grid-template-columns:repeat(3 ,1fr);
+    grid-template-areas: "title p p" ;
+    gap: 20px 35px;
   }
 
   .what__content{
     grid-template-columns: repeat(1 ,1fr);
-    grid-template-rows: repeat(3 , 1fr);
+    grid-template-rows: 174px 174px 197px;
   }
 
   .what{
     gap: 20px 0;
   }
+
+  .how__content{
+    margin-left: 5px;
+  }
 }
+
 @media (width<=520px){
   .header{
     padding: 10px 10px 0 10px;
@@ -463,7 +485,7 @@
   }
 
   .header::after{
-    content: var(--point);
+    content:var(--point);
     border-radius: 50%;
     width: 9px;
     height: 9px;
@@ -496,7 +518,6 @@
     margin-left: 0;
   }
 
-
   .main{
     gap: 50px;
     margin: 40px 0;
@@ -514,9 +535,10 @@
     grid-template-areas: "le le le" "p p p " ;
     gap: 20px;
   }
-
+  
   .pictures{
     grid-template-columns: repeat(1 , 1fr);
+    grid-template-rows:24px 1fr 2.5fr 1.67fr 2.5fr 1.67fr ;
     grid-template-areas: 'i' 'a ' 'b' 'c' 'd' 'v'  ;
     gap: 10px;
   }
@@ -534,5 +556,9 @@
   .what__content{
     grid-template-columns: repeat(1 ,1fr);
     grid-template-rows: 1fr;
+  }
+
+  .footer{
+    margin: 10px;
   }
 }
