--- a/styles/style.css
+++ b/styles/style.css
@@ -162,13 +162,14 @@
 
 .what{
   display: grid;
-  gap: 20px;
+  row-gap: 20px;
 }
 
 .what__title{
    display: grid;
    grid-template-columns: repeat( 3 ,1fr);
    grid-column: 1/3;
+   gap: 10px;
 }
 
 .what__content{
@@ -186,7 +187,9 @@
 
 .how__content{
   grid-area:p;
+  display: grid;
   gap: 20px;
+  
 }
 
 .how__title{
@@ -324,7 +327,15 @@
   font-weight: var(--bold-fonts);
   line-height: var(--line-height); 
 }
-
+.titlee{
+  background-color:  var(--background);
+  color: var(--title);
+  font-family: var(--font-family) ,sans-serif;
+  font-size:var(--font-size);
+  font-style: normal;
+  font-weight: var(--bold-fonts);
+  line-height: var(--line-height); 
+}
 .title-skinny{
   background-color:  var(--background);
   margin-bottom: 10px ;
@@ -391,18 +402,29 @@
     grid-area: m;
     display: flex;
     justify-content: center; 
+  }
 
+  .why{
+    display: grid;
+    grid-template-columns:repeat(3 ,1fr);
+    grid-template-areas: "title p p" ;
+    gap: 20px 35px;
   }
 
   .what__content{
     grid-template-columns: repeat(1 ,1fr);
-    grid-template-rows: repeat(3 , 1fr);
+    grid-template-rows: 174px 174px 197px;
   }
 
   .what{
     gap: 20px 0;
   }
+
+  .how__content{
+    margin-left: 5px;
+  }
 }
+
 @media (width<=520px){
   .header{
     padding: 10px 10px 0 10px;
@@ -485,9 +507,10 @@
     grid-template-areas: "le le le" "p p p " ;
     gap: 20px;
   }
-
+  
   .pictures{
     grid-template-columns: repeat(1 , 1fr);
+    grid-template-rows:24px 1fr 2.5fr 1.67fr 2.5fr 1.67fr ;
     grid-template-areas: 'i' 'a ' 'b' 'c' 'd' 'v'  ;
     gap: 10px;
   }
@@ -505,5 +528,9 @@
   .what__content{
     grid-template-columns: repeat(1 ,1fr);
     grid-template-rows: 1fr;
+  }
+
+  .footer{
+    margin: 10px;
   }
 }
